[package]
name = "rust-verlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
cgmath = "0.18.0"
collision = "0.20.1"
sdl2 = { version = "0.36.0", features = ["unsafe_textures", "gfx", "image"] }
nalgebra = "0.32.5"