[package]
name = "rust-verlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
collision = "0.20.1"
sdl2 = { version = "0.36.0", features = ["unsafe_textures", "gfx", "image"] }
nalgebra = "0.32.5"
bevy = { version = "0.13.2", features = ["dynamic_linking"] } # disable dynamic linking for releases

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
