[package]
name = "rust-verlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
collision = "0.20.1"
sdl2 = { version = "0.36.0", features = ["unsafe_textures", "gfx", "image"] }
nalgebra = "0.32.5"
bevy = { version = "0.14", features = ["dynamic_linking"] } # disable dynamic linking for releases
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bytemuck = "1.7"
iyes_perf_ui = "0.3.0"
smallvec = { version = "1.11", features = ["union", "const_generics"] }
rand_seeder = "0.3.0"
rand_pcg = "0.3.1"
now = "0.1.3"
chrono = "0.4.38"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"

[[bench]]
name = "v4_bench"
harness = false

[[bench]]
name = "v5_bench"
harness = false
